# parrlib

./: .gitignore.txt  CMakeLists.txt  LICENSE  Parrlib.sln  PropertySheet.props  README.md  constants.cpp  constants.h  context.cpp  context.h  debug.cpp  debug.h  framebufferobject.cpp  framebufferobject.h  glad.c  globals.cpp  globals.h  indexbufferobject.cpp  indexbufferobject.h  input.cpp  matrix2f.cpp  matrix3f.cpp  matrix3f.h  matrix4f.cpp  orthocoord.cpp  otherutil.cpp  otherutil.h  parrlib.sln  quaternion.cpp  quaternion.h  realfirstglfwtest.vcxproj  realfirstglfwtest.vcxproj.filters  shader.cpp  shaderstoragebufferobject.cpp  shaderstoragebufferobject.h  sprite.cpp  spritebatch.cpp  stringutils.cpp  textrenderer.cpp  textrenderer.h  (+13 more)
CPUSingleThread/: CPUSingleThread.vcxproj  CPUSingleThread.vcxproj.filters  context.cpp  context.h  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  statemachine.cpp  statemachine.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
DX11/: DX11.vcxproj  DX11.vcxproj.filters  Texture.cpp  Texture.h  common.cpp  common.h  constantbuffer.cpp  constantbuffer.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  shader.cpp  shader.h  vertexbuffer.cpp  vertexbuffer.h
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  common.cpp  common.h  context.cpp  context.h  context_bp_WGL.cpp  context_bp_WGL2.cpp  context_bp_WGL3_NeHe.cpp  context_bp_WGL4.cpp  contextcontext_bp_WGL5.cpp  example_custom_wgl.cpp  framebufferobject.cpp  framebufferobject.h  glad.c  glad.h  indexbufferobject.cpp  indexbufferobject.h  shader.cpp  shader.h  shaderstoragebufferobject.cpp  shaderstoragebufferobject.h  texture.cpp  texture.h  vertexarrayobject.cpp  vertexarrayobject.h  vertexbufferobject.cpp  vertexbufferobject.h
audio/: audio.cpp  audio.h  audioclip.cpp  audiosource.cpp  audiosource.h
debugmenu/: debugmenu.cpp  debugmenu.h
networking/: tcpclientconnection.cpp  tcpserver.cpp  udpconnection.cpp  winsockutil.cpp
olddebugmenu/: console.cpp  console.h  debugdisplay.cpp  debugdisplay.h  debugdisplay_old.cpp  debugdisplay_old.h  debugmenublend.frag  debugmenuold.cpp  debugmenuold.h  pagesystem.h
oldui/: button.cpp  button.h  checkbox.cpp  checkbox.h  dash.frag  dash.vert  drawaccumulator.cpp  drawaccumulator.h  dropmenu.cpp  dropmenu.h  label.cpp  label.h  selector.cpp  selector.h  slider.cpp  slider.h  uicontainer.cpp  uicontainer.h  uielement.cpp  uielement.h  uilist.cpp  uilist.h  uimanager.cpp  uimanager.h
parrlib/: Input.cpp  Input.h  TODO_recreate.txt  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexBuffer.cpp  camera3d.cpp  camera3d.h  constants.cpp  constants.h  context.cpp  context.h  debug.cpp  debug.h  framebuffer.cpp  framebuffer.h  globals.cpp  globals.h  indexbuffer.cpp  indexbuffer.h  mesh3d.cpp  mesh3d.h  parrlib.h  parrlib.vcxproj  parrlib.vcxproj.filters  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_bp.cpp  sprite_bp.h  spritebatch.cpp  spritebatch.h  stringutils.h  time.cpp  time.h  util.cpp  util.h  (+1 more)
physics2d/: collider.cpp  collider.h  collision.cpp  physutil2.cpp  projection.cpp  projection.h
src/: constants.cpp  context.cpp  debug.cpp  framebufferobject.cpp  glad.c  globals.cpp  indexbufferobject.cpp  input.cpp  matrix2f.cpp  matrix3f.cpp  matrix4f.cpp  orthocoord.cpp  otherutil.cpp  quaternion.cpp  shader.cpp  shaderstoragebufferobject.cpp  sprite.cpp  spritebatch.cpp  stringutils.cpp  time.cpp  (+10 more)
(+207 files in other folders)
